--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,19 @@
 name: CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code.
+    - name: Checkout code
       uses: actions/checkout@v2
-    - name: Set up Python.
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
-    - name: Install dependencies.
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
