--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Add init file to satisfy Pylint.
+      run: touch __init__.py
     - name: Lint with Black and Pylint
       uses: ricardochaves/python-lint@v1.3.0
       with:
