--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,17 +7,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Setup
     - name: Checkout code
       uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Lint with black
+
+    # Lint
+    - name: Lint with Black
       run: |
         pip install black
         black --check .
+
+    - name: Lint with Pylint
+      run: |
+        pip install pylint
+        touch __init__.py
+        pylint `pwd` --fail-under=5
