--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
+      - name: Setup environment variables
+        run: cp .env.sample .env
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run bot
@@ -36,6 +38,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
+      - name: Setup environment variables
+        run: cp .env.sample .env
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run tests
