--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Setup environment variables
-        run: cp .env.sample .env
+        run: cp samples/.env .env
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run tests
