--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,21 @@
 name: CI
 on: [push, pull_request]
+permissions:
+  actions: write
+  contents: read
 jobs:
+  prevent-duplicate:
+    runs-on: ubuntu-latest
+    outputs:
+      is-duplicate: ${{ steps.detect-duplicate.outputs.should_skip }}
+    steps:
+      - name: Detect if workflow is running on the same code twice.
+        id: detect-duplicate
+        uses: fkirc/skip-duplicate-actions@v4.0.0
   check-formatting:
     runs-on: ubuntu-latest
+    needs: prevent-duplicate
+    if: needs.prevent-duplicate.outputs.is-duplicate != 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -16,6 +29,7 @@ jobs:
           pre-commit run --all-files
   run-tests:
     runs-on: ubuntu-latest
+    needs: check-formatting
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
