--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [push]
+on: [push,pull_request]
 jobs:
   check-formatting:
     runs-on: ubuntu-latest
@@ -16,6 +16,7 @@ jobs:
           pre-commit run --all-files
   run-tests:
     runs-on: ubuntu-latest
+    needs: check-formatting
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
