feat(log): Make log size customizable.

--- a/samples/.env
+++ b/samples/.env
@@ -1,3 +1,4 @@
 DEBUG=1
+LOG_LAST_N_COMMANDS=100
 SENTRY_DSN=https://exampledsn.ingest.sentry.io/123
-SLACK_OAUTH_TOKEN=slack-oauth-token-ABC123
+SLACK_OAUTH_TOKEN=xoxb-3943959636919-3982289583824-iKtJsairxpmjH2yrVMg99nFG
