feat(github): Add OAuth flow to ease webhook creation.

--- a/samples/.env
+++ b/samples/.env
@@ -1,4 +1,7 @@
+BASE_URL=https://blah-111-22-333-444.ngrok.io
 DEBUG=1
+GITHUB_APP_CLIENT_ID=0123456789abcdefghij
+GITHUB_APP_CLIENT_SECRET=5a4a33ffd85a4a35a4a33ffd85a4a35a4a33ffd8
 LOG_LAST_N_COMMANDS=100
 SENTRY_DSN=https://exampledsn.ingest.sentry.io/123
 SLACK_OAUTH_TOKEN=xoxb-3943959636919-3982289583824-iKtJsairxpmjH2yrVMg99nFG
