refactor(slack): Refactor `/gh-cls` command.

--- a/samples/.env
+++ b/samples/.env
@@ -1,4 +1,8 @@
+BASE_URL=https://e2fb-103-37-201-174.ngrok.io
 DEBUG=1
+GITHUB_APP_CLIENT_ID=47ae347ae3fbe2fbe2fb
+GITHUB_APP_CLIENT_SECRET=e2fbe2fbe2fbe2fbe2fbe2e2fbe2fbe2e2fbe2fb
 LOG_LAST_N_COMMANDS=100
 SENTRY_DSN=https://exampledsn.ingest.sentry.io/123
+SLACK_BOT_ID=B03UK6G2YN5
 SLACK_OAUTH_TOKEN=xoxb-3943959636919-3982289583824-iKtJsairxpmjH2yrVMg99nFG
