--- a/samples/.env
+++ b/samples/.env
@@ -2,6 +2,7 @@ BASE_URL=https://blah-111-22-333-444.ngrok.io
 DEBUG=1
 GITHUB_APP_CLIENT_ID=0123456789abcdefghij
 GITHUB_APP_CLIENT_SECRET=e2fbe2fbe2fbe2fbe2fbe2e2fbe2fbe2e2fbe2fb
+GITHUB_WEBHOOK_SECRET=3dbd2c253813c65b296b7acf67470b7e7bc116e3
 LOG_LAST_N_COMMANDS=100
 SENTRY_DSN=https://exampledsn.ingest.sentry.io/123
 SLACK_BOT_ID=B03UK6UK6UK
