build: Extract port numbers to env.

--- a/samples/.env
+++ b/samples/.env
@@ -1,3 +1,5 @@
+CONTAINER_PORT=5000
 DEBUG=1
+HOST_PORT=9999
 SENTRY_DSN=https://exampledsn.ingest.sentry.io/123
 SLACK_OAUTH_TOKEN=slack-oauth-token-ABC123
