--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
             context: .
         container_name: github-slack-bot
         ports:
-            - "9999:5000"
+            - "${HOST_PORT}:${CONTAINER_PORT}"
