--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-  github-slack-bot:
+  proton:
     build:
       context: .
-    container_name: github-slack-bot
+    container_name: proton
     ports:
       - "${HOST_PORT}:${CONTAINER_PORT}"
     volumes:
