--- a/samples/.env
+++ b/samples/.env
@@ -1,4 +1,4 @@
-BASE_URL=https://blah-111-22-333-444.ngrok.io
+BASE_URL=blah-111-22-333-444.ngrok.io
 CONTAINER_PORT=5000
 DEBUG=1
 GITHUB_APP_CLIENT_ID=0123456789abcdefghij
