--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-      - name: Setup environment variables
-        run: cp samples/.env .env
+      - name: Setup environment
+        run: |
+          cp samples/.env.dev .env
+          mkdir data
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run tests
-        run: python -m unittest
+        run: python -m unittest -v
