--- a/samples/.env
+++ b/samples/.env
@@ -1,7 +1,5 @@
 BASE_URL=subdomain.domain.tld/path1/path2
-CONTAINER_PORT=5000
-FLASK_APP=main
-FLASK_DEBUG=True
+FLASK_DEBUG=1
 GITHUB_APP_CLIENT_ID=0123456789abcdefghij
 GITHUB_APP_CLIENT_SECRET=e2fbe2fbe2fbe2fbe2fbe2e2fbe2fbe2e2fbe2fb
 GITHUB_WEBHOOK_SECRET=3dbd2c253813c65b296b7acf67470b7e7bc116e3
