--- a/samples/.env.dev
+++ b/samples/.env.dev
@@ -1,8 +1,6 @@
 SLACK_APP_ID=A0101010101
 BASE_URL=blah-111-22-333-444.ngrok.io
-CONTAINER_PORT=5000
-FLASK_APP=main
-FLASK_DEBUG=True
+FLASK_DEBUG=1
 GITHUB_APP_CLIENT_ID=0123456789abcdefghij
 GITHUB_APP_CLIENT_SECRET=e2fbe2fbe2fbe2fbe2fbe2e2fbe2fbe2e2fbe2fb
 GITHUB_WEBHOOK_SECRET=3dbd2c253813c65b296b7acf67470b7e7bc116e3
